--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.2.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "framer-motion": "^10.12.16",
     "lodash": "^4.17.21",
     "mongoose": "^7.0.4",
     "next": "^13.2.4",
